# timeapp

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_NOTES.md  SECURITY.md  caddyfile  docker-compose.yml  manage.py  requirements.txt  utils.py
chrona-backend/: .coveragerc  Dockerfile  README.md  SECURITY.md  _celery.py  conftest.py  entrypoint.sh  heroku.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
chrona-backend/_celery/: __init__.py
chrona-backend/config/: __init__.py  asgi.py  logging_handlers.py  redis_client.py  storages.py  urls.py  wsgi.py
chrona-backend/config/settings/: __init__.py  base.py  dev.py  prod.py  security_settings.py  session_cors_csrf_settings.py  social_auth_settings.py
chrona-backend/countdown/: __init__.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
chrona-backend/countdown/migrations/: 0001_initial.py  0002_timers_remaining_duration_seconds_and_more.py  0003_alter_timers_status.py  0004_alter_timers_id.py  0005_alter_timers_status.py
chrona-backend/countdown/tests/: factories.py  test_models.py  test_serializers.py  (+1 more)
chrona-backend/notifications/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
chrona-backend/scripts/: generate_vapid_keys.py  update_azure_vaults.py
chrona-backend/task_registry/: apps.py  models.py
chrona-backend/timer/: ext_views.py  urls.py  utils.py  views.py
chrona-backend/users/: models.py  pipeline.py  serializers.py  urls.py  validators.py  views.py
chrona-backend/utils/: __init__.py  api_views.py  auth.py  django_meta_patch.py  fields.py  middlewares.py  orm.py  parsers.py  renderers.py  shield.py  urls.py  views.py
chrona-backend/zeero/: settings.py
logging-service/: Dockerfile  pyproject.toml
logging-service/app/: config.py  consumer.py  logdna_logger.py  main.py
(+60 files in other folders)
